# agentcore-metering

./: .gitattributes  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
agentcore_metering/: __init__.py  constants.py
agentcore_metering/adapters/django/: __init__.py  admin.py  apps.py  cleanup.py  conf.py  models.py  periodic_tasks.py  serializers.py  urls.py
agentcore_metering/adapters/django/llm_static/: capability_labels.yaml  load.py  mode_to_model_type.yaml
agentcore_metering/adapters/django/migrations/: 0001_initial.py  0002_add_llm_config.py  0003_llm_config_single_config.py  0004_add_llm_usage_cost_usd.py  0005_cost_and_currency.py  0006_llm_config_list_and_strategy.py  0007_remove_modelstrategy.py  0008_llmconfig_add_uuid.py  0009_rename_llm_track_user_created_idx_llm_tracker_user_id_5800dd_idx_and_more.py  0010_remove_llmconfig_order.py  0011_llmconfig_is_default.py  0012_alter_llmconfig_options_alter_llmconfig_is_default.py  0013_llmusage_started_at.py  0014_alter_llmusage_created_at_alter_llmusage_started_at.py  (+4 more)
agentcore_tracking/: __init__.py  constants.py
agentcore_tracking/adapters/: __init__.py
agentcore_tracking/adapters/django/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  utils.py
docs/: DESIGN.md  DESIGN.zh-CN.md
docs/review_histories/: ray-review-python_agentcore-metering.md
tests/: __init__.py  conftest.py  settings.py  test_api_views.py  test_llm_config_api.py  test_llm_service.py  test_llm_tracker.py  test_llm_usage.py  test_llm_usage_stats.py  test_runtime_config_service.py  urls.py
(+69 files in other folders)
