[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-tracking"
version = "0.1.0"
description = "Unified observability for LLM/text, image, and video calls (Django adapter)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "drf-spectacular>=0.27.0",
    "litellm>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcore_tracking*"]

[tool.setuptools.package-data]
"agentcore_tracking.adapters.django.llm_static" = ["*.yaml", "providers/*.yaml"]

[tool.pytest.ini_options]
django_settings = "tests.settings"
python_files = ["test_*.py"]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "unit: unit tests (no HTTP)",
    "api: API/integration tests (HTTP endpoints)",
]
